[gd_scene load_steps=11 format=2]

[ext_resource path="res://ui_elements/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui_elements/TitleWindow.tscn" type="PackedScene" id=2]
[ext_resource path="res://screens/InterestLinks.gd" type="Script" id=3]
[ext_resource path="res://ui_elements/Button.tscn" type="PackedScene" id=4]
[ext_resource path="res://tres/fonts/Ubuntu24_Normal.tres" type="DynamicFont" id=5]
[ext_resource path="res://tres/PanelHelpIcons.tres" type="StyleBox" id=6]
[ext_resource path="res://ui_elements/BtnIconHelp.tscn" type="PackedScene" id=7]
[ext_resource path="res://ui_elements/Panel.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/dpad_ud.png" type="Texture" id=9]

[sub_resource type="StyleBoxLine" id=1]
color = Color( 1, 1, 1, 1 )
thickness = 2

[node name="InterestLinks" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -196.0
margin_top = -147.0
margin_right = 196.0
margin_bottom = 147.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 19
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_right = 392.0
text = "GET_GAME_COVERS"

[node name="Button2" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_top = 58.0
margin_right = 392.0
margin_bottom = 97.0
text = "GET_GAME_COVERS2"

[node name="Button3" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_top = 116.0
margin_right = 392.0
margin_bottom = 155.0
text = "DONATE"

[node name="Button4" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_top = 174.0
margin_right = 392.0
margin_bottom = 213.0
text = "BUYLAUNCHER"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 232.0
margin_right = 392.0
margin_bottom = 236.0
custom_styles/separator = SubResource( 1 )

[node name="BtnBack" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_top = 255.0
margin_right = 392.0
margin_bottom = 294.0
text = "BACKTOMENU"

[node name="PanelHelp" parent="." instance=ExtResource( 8 )]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -70.0
margin_right = 0.0
margin_bottom = 0.0
custom_styles/panel = ExtResource( 6 )

[node name="Hbx" type="HBoxContainer" parent="PanelHelp"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1356.0
margin_bottom = 60.0
mouse_filter = 2
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_editor_description_": ""
}

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelHelp/Hbx"]
margin_left = 492.0
margin_right = 628.0
margin_bottom = 50.0
custom_constants/separation = 6
alignment = 2
__meta__ = {
"_editor_description_": ""
}

[node name="BtnIconHelp" parent="PanelHelp/Hbx/HBoxContainer3" instance=ExtResource( 7 )]
margin_bottom = 50.0

[node name="Label" type="Label" parent="PanelHelp/Hbx/HBoxContainer3"]
margin_left = 58.0
margin_top = 11.0
margin_right = 136.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.729412 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 2
text = "SELECT"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="HBoxContainer" type="HBoxContainer" parent="PanelHelp/Hbx"]
visible = false
margin_left = 522.0
margin_right = 783.0
margin_bottom = 50.0
custom_constants/separation = 6
alignment = 2
__meta__ = {
"_editor_description_": ""
}

[node name="BtnIconHelp" parent="PanelHelp/Hbx/HBoxContainer" instance=ExtResource( 7 )]
margin_bottom = 50.0
action = "ui_cancel"

[node name="Label" type="Label" parent="PanelHelp/Hbx/HBoxContainer"]
margin_left = 58.0
margin_top = 11.0
margin_right = 261.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.729412 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 2
text = "CLOSE_LAUNCHER"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="LR" type="HBoxContainer" parent="PanelHelp/Hbx"]
margin_left = 678.0
margin_right = 854.0
margin_bottom = 50.0
custom_constants/separation = 6

[node name="Spr" type="TextureRect" parent="PanelHelp/Hbx/LR"]
margin_right = 60.0
margin_bottom = 50.0
rect_min_size = Vector2( 60, 40 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 6
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="PanelHelp/Hbx/LR"]
margin_left = 66.0
margin_top = 11.0
margin_right = 176.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.729412 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 2
text = "NAVIGATE"
align = 1
valign = 1

[node name="TitleWindow" parent="." instance=ExtResource( 2 )]
margin_right = 59.0
rect_scale = Vector2( 0.958927, 1 )
title = "INTERESTLNKS"
btn_back_visible = false

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_OpenUrl" binds= [ "http://thumbnails.libretro.com/" ]]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_OpenUrl" binds= [ "https://gamesdb.launchbox-app.com/#s" ]]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_OpenUrl" binds= [ "https://ko-fi.com/dannygaray60" ]]
[connection signal="pressed" from="VBoxContainer/Button4" to="." method="_on_OpenUrl" binds= [ "https://dannygaray60.itch.io/funemustation-launcher" ]]
[connection signal="pressed" from="VBoxContainer/BtnBack" to="." method="_on_BtnBack_pressed"]
[connection signal="btn_back_pressed" from="TitleWindow" to="." method="_on_TitleWindow_btn_back_pressed"]
